Fixed text colour for readability on remote and removed 'All Posts' button for sites with <6 posts

--- a/css/remote.css
+++ b/css/remote.css
@@ -2,3 +2,6 @@
     margin-left:1em;
     margin-right:1em;
 }
+body {
+    color: #000000;
+}
